Fix spacing around search box
Added some padding to the header to give more room, and then made the
search box itself slightly smaller to align with locale and user menus.

--- a/app/styles/components/global-search-box.scss
+++ b/app/styles/components/global-search-box.scss
@@ -2,7 +2,7 @@
 
 .global-search-box {
   display: inline-block;
-  height: 2rem;
+  height: calc(2rem - 3px);
   max-width: 40rem;
   position: relative;
 
